A GreaseMonkey Like Node.JS Platform
Init Ver

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "serve-favicon": "~2.4.2",
     "anyproxy": "~3.10.4"
   },
+  "readmeFilename": "./README.md",
   "keywords": [
     "nodemonkey",
     "monkey"
