--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.1",
   "description": "A GreaseMonkey Like Node JS Platform",
   "main": "app.js",
-  "scripts": {
-    "start": "node ./bin/www"
+  "bin": {
+    "nodemonkey": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
